tests/rustdoc-ui/doc-alias-crate-level.stderr
error: `#![doc(alias = "...")]` isn't allowed as a crate-level attribute
  --> $DIR/doc-alias-crate-level.rs:1:16
   |
LL | #![doc(alias = "crate-level-not-working")]
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

