tests/rustdoc-ui/doc-alias-crate-level.rs
#![doc(alias = "crate-level-not-working")] //~ ERROR
